--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
 
                         <!-- Feedback from Interviewers Section (Only for Interviewee) -->
             <div class="inbox-card card p-4 shadow-sm mx-auto" style="max-width: 600px;">
-                <h5 class="mb-3">Feedback from Interviewers</h5>
+                <h5 class="mb-3">Feedback from Interviews</h5>
                 <ul id="feedback-list" class="list-group">
                     <li class="list-group-item">
                         <strong>Tech Innovators</strong>: Great communication skills, but we need someone with more technical expertise.
